<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".actividades.LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:src="@mipmap/ic_launcher_round" />
    
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_layout"
        style="@style/til_form">

        <EditText
            android:id="@+id/email_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/fondo_forms"
            android:hint="@string/txt_email"
            android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pass_layout"
        style="@style/til_form">

        <EditText
            android:id="@+id/password_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/fondo_forms"
            android:hint="@string/txt_password"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_login"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginEnd="20dp"
            android:text="@string/txt_login" />

        <Button
            android:id="@+id/btn_registro"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:text="@string/txt_registro" />

    </LinearLayout>


</LinearLayout>